[mypy]
mypy_path = stubs
ignore_missing_imports = True

[options.entry_points]
console_scripts =
    import_last_nivo_data=nivo_api.cli:import_last_nivo_data
    import_all_nivo_data=nivo_api.cli:import_all_nivo_data
    import_last_bra=nivo_api.cli:import_last_bra
    import_all_bra=nivo_api.cli:import_all_bra
    import_bra=nivo_api.cli:import_bra
    import_nivo_sensor_station=nivo_api.cli:import_nivo_sensor_station
    import_massifs=nivo_api.cli:import_massifs
    import_flowcapt_station=nivo_api.cli:import_flowcapt_station
    init_db=nivo_api.cli:init_db

[tool:pytest]
addopts = --pspec --cov=nivo_api --cov-report=xml